<resources>
    <string name="app_name" translatable="false">ProjectAndroid</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="have_an_account_register"><u>Dont have an account? Register</u></string>

    <!-- SIMONG GAME -->
    <string name="round_number">Round: %d</string>

    <!-- UNSCRAMBLE GAME -->
    <string name="skip">Skip</string>
    <string name="submit">Submit</string>
    <string name="score">Score: %d</string>
    <string name="word_count">%d of %d words</string>
    <string name="enter_your_word">Enter your word</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_scored">"You scored: %d"</string>
    <string name="exit">Exit</string>
    <string name="play_again">Play Again</string>
    <string name="try_again">Try again!</string>
    <string name="instructions">Unscramble the word using all the letters.</string>
    <string name="login_label">Login</string>
    <string name="login_button">Login</string>
    <string name="email">Email</string>
    <string name="sign_out">Sign out</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="register_label">Register</string>
    <string name="register_button">Register</string>
    <string name="players">Players</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="bad_luck">Bad luck!</string>
    <string name="math_summary_title">Math operation: %s</string>
    <string name="how_many_times_have_you_seen_this_image">How many times have you seen this image?</string>
    <string name="your_guess">Your guess</string>
    <string name="in_this_task_you_have_to_guess_how_many_times_you_ve_seen_an_iamge_shown_at_the_end">In this game you have to guess how many times you\'ve seen an image shown at the end</string>
    <string name="difficulty">Difficulty</string>
    <string name="normal">Normal</string>
    <string name="hard">Hard</string>
    <string name="easy">Easy</string>
    <string name="observation_correctly_guessed">You have correctly guessed the number of image occurrences</string>
    <string name="observation_incorrectly_guessed">You have given the wrong number of image occurrences. Correct answer is %d.</string>
    <string name="observation_difficulty_description">%s - %d images and %.2f seconds single image time duration</string>
    <string name="observation_difficulty_description_label">Difficulty description</string>
    <string name="guess_cant_be_empty">Guess can\'t be empty</string>
    <string name="math_operation_string">%d %s %d %s %d</string>
    <string name="math_dialog_fail_message">You have chosen: %s. Correct answer is: %s. You scored: %d points</string>
    <string name="math_intro_description">There will be displayed an arithmetic operation. Your task is to select the correct answer out of four possible.</string>
    <string name="math_intro_description2">Number next to this icon is time left for your answer.</string>
    <string name="play">Play</string>
    <string name="observation_game_percentage_value" translatable="false">%d%%</string>
    <string name="try_to_guess_the_word_from_shuffled_letters">Try to guess the word from shuffled letters!</string>
    <string name="you_will_see_a_random_sequence_which_you_have_to_reply_you_have_2_lifes_each_round_the_sequence_gets_longer_good_luck">You will see a random sequence which you have to reply?? You have 2 lifes. Each round the sequence gets longer. Good luck</string>
    <string name="simon_game_summary">You\'ve lost at round: %d</string>
    <string name="end">The end</string>



    <!--    "animal",-->
    <!--    "auto",-->
    <!--    "anecdote",-->
    <!--    "alphabet",-->
    <!--    "all",-->
    <!--    "awesome",-->
    <!--    "arise",-->
    <!--    "balloon",-->
    <!--    "basket",-->
    <!--    "bench",-->
    <!--    "best",-->
    <!--    "birthday",-->
    <!--    "book",-->
    <!--    "briefcase",-->
    <!--    "camera",-->
    <!--    "camping",-->
    <!--    "candle",-->
    <!--    "cat",-->
    <!--    "cauliflower",-->
    <!--    "chat",-->
    <!--    "children",-->
    <!--    "class",-->
    <!--    "classic",-->
    <!--    "classroom",-->
    <!--    "coffee",-->
    <!--    "colorful",-->
    <!--    "cookie",-->
    <!--    "creative",-->
    <!--    "cruise",-->
    <!--    "dance",-->
    <!--    "daytime",-->
    <!--    "dinosaur",-->
    <!--    "doorknob",-->
    <!--    "dine",-->
    <!--    "dream",-->
    <!--    "dusk",-->
    <!--    "eating",-->
    <!--    "elephant",-->
    <!--    "emerald",-->
    <!--    "eerie",-->
    <!--    "electric",-->
    <!--    "finish",-->
    <!--    "flowers",-->
    <!--    "follow",-->
    <!--    "fox",-->
    <!--    "frame",-->
    <!--    "free",-->
    <!--    "frequent",-->
    <!--    "funnel",-->
    <!--    "green",-->
    <!--    "guitar",-->
    <!--    "grocery",-->
    <!--    "glass",-->
    <!--    "great",-->
    <!--    "giggle",-->
    <!--    "haircut",-->
    <!--    "half",-->
    <!--    "homemade",-->
    <!--    "happen",-->
    <!--    "honey",-->
    <!--    "hurry",-->
    <!--    "hundred",-->
    <!--    "ice",-->
    <!--    "igloo",-->
    <!--    "invest",-->
    <!--    "invite",-->
    <!--    "icon",-->
    <!--    "introduce",-->
    <!--    "joke",-->
    <!--    "jovial",-->
    <!--    "journal",-->
    <!--    "jump",-->
    <!--    "join",-->
    <!--    "kangaroo",-->
    <!--    "keyboard",-->
    <!--    "kitchen",-->
    <!--    "koala",-->
    <!--    "kind",-->
    <!--    "kaleidoscope",-->
    <!--    "landscape",-->
    <!--    "late",-->
    <!--    "laugh",-->
    <!--    "learning",-->
    <!--    "lemon",-->
    <!--    "letter",-->
    <!--    "lily",-->
    <!--    "magazine",-->
    <!--    "marine",-->
    <!--    "marshmallow",-->
    <!--    "maze",-->
    <!--    "meditate",-->
    <!--    "melody",-->
    <!--    "minute",-->
    <!--    "monument",-->
    <!--    "moon",-->
    <!--    "motorcycle",-->
    <!--    "mountain",-->
    <!--    "music",-->
    <!--    "north",-->
    <!--    "nose",-->
    <!--    "night",-->
    <!--    "name",-->
    <!--    "never",-->
    <!--    "negotiate",-->
    <!--    "number",-->
    <!--    "opposite",-->
    <!--    "octopus",-->
    <!--    "oak",-->
    <!--    "order",-->
    <!--    "open",-->
    <!--    "polar",-->
    <!--    "pack",-->
    <!--    "painting",-->
    <!--    "",-->
    <!--    "",-->
    <!--    "pillow",-->
    <!--    "pizza",-->
    <!--    "podcast",-->
    <!--    "",-->
    <!--    "puppy",-->
    <!--    "",-->
    <!--    "recipe",-->
    <!--    "release",-->
    <!--    "restaurant",-->
    <!--    "revolve",-->
    <!--    "rewind",-->
    <!--    "",-->
    <!--    "",-->
    <!--    "",-->
    <!--    "",-->
    <!--    "",-->
    <!--    "",-->
    <!--    "should",-->
    <!--    "",-->
    <!--    "spaceship",-->
    <!--    "stargazing",-->

    <string-array name="words">
        <item>cat</item>
        <item>water</item>
        <item>zeal</item>
        <item>zone</item>
        <item>zoology</item>
        <item>zigzag</item>
        <item>zebra</item>
        <item>yummy</item>
        <item>year</item>
        <item>yoyo</item>
        <item>yogurt</item>
        <item>yoga</item>
        <item>world</item>
        <item>winter</item>
        <item>well</item>
        <item>wander</item>
        <item>walrus</item>
        <item>vision</item>
        <item>volume</item>
        <item>visitor</item>
        <item>uniform</item>
        <item>truck</item>
        <item>useful</item>
        <item>together</item>
        <item>street</item>
        <item>skill</item>
        <item>room</item>
        <item>tourist</item>
        <item>ship</item>
        <item>taxi</item>
        <item>style</item>
        <item>seed</item>
        <item>run</item>
        <item>secret</item>
        <item>person</item>
        <item>puzzle</item>
        <item>picnic</item>
        <item>shirt</item>
        <item>presentation</item>

    </string-array>
</resources>