<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home"
    app:startDestination="@id/mainFragment">

    <fragment
        android:id="@+id/mainFragment"
        android:name="com.example.projectandroid.home.MainFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_main" />
    <fragment
        android:id="@+id/profileFragment"
        android:name="com.example.projectandroid.home.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/playersFragment"
        android:name="com.example.projectandroid.home.PlayersFragment"
        android:label="@string/players"
        tools:layout="@layout/fragment_players" />
</navigation>